--- a/ClickLib/ClickLib.csproj
+++ b/ClickLib/ClickLib.csproj
@@ -43,13 +43,16 @@
 
   <ItemGroup>
     <PackageReference Include="ILRepack" Version="2.0.18" GeneratePathProperty="true" />
+    <PackageReference Include="Reloaded.Memory" Version="4.1.3" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.333">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <ProjectReference Include="..\..\..\lib\FFXIVClientStructs\FFXIVClientStructs\FFXIVClientStructs.csproj" />
-    <Reference Include="Dalamud" Private="False" />
-    <Reference Include="Reloaded.Memory" Private="False" />
+    <Reference Include="Dalamud">
+      <HintPath>..\..\..\lib\Dalamud\Dalamud.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
   </ItemGroup>
 
 </Project>
